--- a/home/package.json
+++ b/home/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.27"
+    "vue": "^3.2.27",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.1.0",
