--- a/home/package.json
+++ b/home/package.json
@@ -4,16 +4,18 @@
   "scripts": {
     "dev": "vite --port 5001 --strictPort",
     "build": "vue-tsc --noEmit && vite build",
+    "build:debug": "vue-tsc --noEmit && vite build --sourcemap --watch",
     "preview": "vite preview --port 5001 --strictPort",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "pinia": "^2.0.11",
     "vue": "^3.2.27",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.1.0",
+    "@originjs/vite-plugin-federation": "^1.1.3",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.21",
     "@vitejs/plugin-vue": "^2.0.1",
