--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "vue-poc-federation-modules",
   "private": true,
   "version": "1.0.0",
-  "engines": {
-    "npm": "^8.4"
-  },
   "workspaces": [
     "home",
+    "common/counter-store",
     "app"
   ],
   "scripts": {
-    "dev": "concurrently -n home-build,home-server,app -c \"bgBlue.white.bold,bgBlue.white.bold,bgRed.white.bold\" \"npm run build --workspace=home -- --watch\" \"npm run preview --workspace=home\" \"npm run dev --workspace=app\"",
+    "dev": "concurrently -n home-build,home-server,counter-store-build,counter-store-server,app -c \"bgBlue.white.bold,bgBlue.white.bold,bgRed.white.bold\" \"npm run build:debug --workspace=home\" \"npm run preview --workspace=home\" \"npm run build:debug --workspace=common/counter-store\" \"npm run preview --workspace=common/counter-store\" \"npm run dev --workspace=app\"",
     "build": "npm run build --workspaces --if-present",
     "preview": "concurrently -n home,app -c \"bgBlue.white.bold,bgRed.white.bold\" \"npm run preview --workspace=home\" \"npm run preview --workspace=app\"",
     "stop": "kill-port --port 5000,5001"
@@ -18,5 +16,9 @@
   "devDependencies": {
     "concurrently": "^6.1.0",
     "kill-port": "^1.6.1"
+  },
+  "volta": {
+    "node": "17.6.0",
+    "npm": "8.5.1"
   }
 }
